[tool.poetry]
name = "pydantic-validation-formatter"
version = "0.1.0"
description = "This is a package that allows to customize pydantic built-in validation error messages"
authors = ["Soami Charan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
